# Tiny-Sat-Anomaly

./: .gitignore  README.md  dashboard.py  model.onnx  pyproject.toml  requirements.txt  setup.py
configs/: config.yaml
src/: __init__.py  evaluate.py  train.py  utils.py
src/data/: __init__.py  make_dataset.py
src/models/: __init__.py  lstm_model.py
web/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  prepare_assets.py  tailwind.config.ts
web/public/: model.onnx  telemetry_data.json
web/public/textures/: README.md
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/analytics/: page.tsx
web/src/app/model/: page.tsx
web/src/app/operations/: page.tsx
web/src/components/dashboard/: Oscilloscope.tsx
web/src/components/globe/: GlobeViz.tsx
web/src/components/layout/: AnomalyBreakdown.tsx  ControlPanel.tsx  DataAttribution.tsx  EnhancedLogs.tsx  MetricCard.tsx  MissionLog.tsx  ModelCard.tsx  ModelMetrics.tsx  Navigation.tsx  SOPPanel.tsx  StatusBadge.tsx  TemporalAnalysis.tsx
web/src/components/three/: Satellite3D.tsx  SatelliteScene.tsx  Scene3D.tsx
web/src/hooks/: useInference.ts  useSatelliteTracking.ts
web/src/lib/: onnx.ts  satellite-api.ts
web/src/store/: useStore.ts
